[package]
name = "aes-ctr"
version = "0.3.0"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "AES-CTR stream ciphers"
documentation = "https://docs.rs/aes-ctr"
repository = "https://github.com/RustCrypto/stream-ciphers"
keywords = ["crypto", "stream-cipher", "trait"]
categories = ["cryptography", "no-std"]

[dependencies]
stream-cipher = { git = "https://github.com/laicj2025/traits-stream-cipher-v0.3.0.git", branch = "master" }

[target.'cfg(not(all(target_feature = "aes", target_feature = "sse2", target_feature = "ssse3", any(target_arch = "x86_64", target_arch = "x86"))))'.dependencies]
ctr = "0.3"
aes-soft = { git = "https://github.com/laicj2025/aes-soft.git", branch = "master" }

[target.'cfg(all(target_feature = "aes", target_feature = "sse2", target_feature = "ssse3", any(target_arch = "x86_64", target_arch = "x86")))'.dependencies]
aesni = { git = "https://github.com/laicj2025/aesni-v0.6.0.git", branch = "master" }

[dev-dependencies]
stream-cipher = { git = "https://github.com/laicj2025/traits-stream-cipher-v0.3.0.git", branch = "master" }

[badges]
travis-ci = { repository = "RustCrypto/stream-ciphers" }
