[package]
name = "ctr"
version = "0.3.0"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "CTR block mode of operation"
documentation = "https://docs.rs/ctr"
repository = "https://github.com/RustCrypto/stream-ciphers"
keywords = ["crypto", "stream-cipher", "trait"]
categories = ["cryptography", "no-std"]

[dependencies]
stream-cipher = { git = "https://github.com/laicj2025/traits-stream-cipher-v0.3.0.git", branch = "master" }
block-cipher-trait = { git = "https://github.com/RustCrypto/traits.git", tag = "block-cipher-trait-v0.6.0" }

[dev-dependencies]
aes = "0.3"
stream-cipher = { git = "https://github.com/laicj2025/traits-stream-cipher-v0.3.0.git", branch = "master" }

[badges]
travis-ci = { repository = "RustCrypto/stream-ciphers" }
